[gd_scene load_steps=11 format=3 uid="uid://dvw2iife5e7xa"]

[ext_resource type="Script" path="res://scripts/boat.gd" id="1_c50b5"]
[ext_resource type="Texture2D" uid="uid://co8pajgal1380" path="res://resources/Boat.png" id="2_8vdeo"]
[ext_resource type="Script" path="res://scenes/Player1.gd" id="3_3x1q3"]
[ext_resource type="Texture2D" uid="uid://55ckvgtd3eiq" path="res://resources/paddle.png" id="3_h1n55"]
[ext_resource type="Script" path="res://scripts/PaddleLeft.gd" id="5_6mgdm"]
[ext_resource type="Script" path="res://scenes/Player2.gd" id="6_uvmff"]
[ext_resource type="Script" path="res://scripts/PaddleRight.gd" id="7_gepqe"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_1d24x"]
friction = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ik2xm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uniiv"]

[node name="BoatRigidBody" type="RigidBody2D" groups=["Boat"]]
position = Vector2(100, 100)
physics_material_override = SubResource("PhysicsMaterial_1d24x")
gravity_scale = 0.0
center_of_mass_mode = 1
center_of_mass = Vector2(-50, 0)
linear_velocity = Vector2(50, 0)
linear_damp = 0.001
script = ExtResource("1_c50b5")

[node name="BoatCollisionShape" type="CollisionPolygon2D" parent="."]
scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(-2, 0, -25.4467, -22.0272, -74.4467, -42.0272, -84.4467, 3.97284, -76.4467, 45.9728, -29.4467, 33.9728)

[node name="BoatImage" type="Sprite2D" parent="BoatCollisionShape"]
position = Vector2(0, -50)
rotation = 1.5708
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_8vdeo")
centered = false

[node name="Player1" type="CharacterBody2D" parent="BoatCollisionShape"]
position = Vector2(-34, -26)
rotation = -0.349066
scale = Vector2(0.2, 0.2)
slide_on_ceiling = false
script = ExtResource("3_3x1q3")

[node name="PaddleLeft" type="Sprite2D" parent="BoatCollisionShape/Player1"]
texture = ExtResource("3_h1n55")
offset = Vector2(180, 0)
script = ExtResource("5_6mgdm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoatCollisionShape/Player1"]
shape = SubResource("RectangleShape2D_ik2xm")
disabled = true

[node name="Player2" type="CharacterBody2D" parent="BoatCollisionShape"]
position = Vector2(-34, 32)
rotation = 0.349066
scale = Vector2(0.2, 0.2)
slide_on_ceiling = false
script = ExtResource("6_uvmff")

[node name="PaddleRight" type="Sprite2D" parent="BoatCollisionShape/Player2"]
texture = ExtResource("3_h1n55")
offset = Vector2(180, 0)
flip_v = true
script = ExtResource("7_gepqe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoatCollisionShape/Player2"]
shape = SubResource("RectangleShape2D_uniiv")
disabled = true

[node name="DesiredStearingLeft" type="Marker2D" parent="BoatCollisionShape"]
position = Vector2(50, 30)
rotation = 0.349066

[node name="DesiredStearingRight" type="Marker2D" parent="BoatCollisionShape"]
position = Vector2(50, -30)
rotation = 0.698132
